syntax = "proto3";

message DescargarArchivoRequest {
  string archivoid = 1;
  string nombre = 2;
}

message DescargarArchivoResponse {
  oneof request {
    string archivoid = 1;
    string nombre = 2;
    bytes archivo = 3;
  }
}

service ArchivosService {
  rpc descargarVideo (DescargarArchivoRequest) returns (stream DescargarArchivoResponse);
  rpc subirVideo (stream DescargarArchivoResponse) returns (DescargarArchivoRequest);
  rpc descargarConstancia (DescargarArchivoRequest) returns (stream DescargarArchivoResponse);
  rpc subirConstancia (stream DescargarArchivoResponse) returns (DescargarArchivoRequest);
}